# my_claude_skills

./: README.md  hpc_cluster.md  install.sh
.claude/: settings.json  settings.local.json
skills/auto_experiment/: README.md  SKILL.md  config.yaml
skills/auto_experiment/templates/: CLAUDE.md.template  architecture.md.template  context_management.md  doc_structure.md  exp_log.md.template  experiment_loop.md  findings.md.template  monitoring_guide.md  setup_checklist.md.template  sketch.md.template
skills/create_skill/: SKILL.md  examples.md  reference.md
skills/create_skill/templates/: SKILL.md.template
skills/create_skill_with_paper/: SKILL.md  examples.md
skills/create_skill_with_paper/templates/: SKILL_TEMPLATE.md
skills/experiment_report/: SKILL.md  examples.md
skills/experiment_report/templates/: report_template.md
skills/idea_refinery/: SKILL.md
skills/idea_refinery/modes/: auto.md  converge.md  draft.md  evaluate.md  propose.md  setup.md  survey.md
skills/idea_refinery/templates/: CLAUDE.md.template  config.md.template  decisions.md.template  findings.md.template  idea_card.md.template  proposal.md.template  sketch.md.template  survey_cache.md.template
skills/paper_related_works/: SKILL.md
skills/papers/paper_3d__concerto/: SKILL.md  examples.md
skills/python_project_layout/: SKILL.md  examples.md  reference.md
skills/python_project_layout/templates/: pyproject.toml
skills/rlinf/: SKILL.md  reference.md
skills/topic_survey/: SKILL.md
skills/ucr_hpcc_cluster/: SKILL.md  examples.md  reference.md
(+46 files in other folders)
