# Template: pyproject.toml (src layout with setuptools)
# Replace all {{PLACEHOLDERS}} with actual values.
# Delete sections you don't need.

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{package-name}}"
version = "0.1.0"
description = "{{Short description of the project.}}"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "{{Author Name}}", email = "{{author@example.com}}"},
]
keywords = []
dependencies = [
    # "requests>=2.28",
    # "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    # "mypy>=1.0",
]

# Uncomment to create a CLI command:
# [project.scripts]
# {{cli-name}} = "{{package_name}}.cli:main"

[project.urls]
# Homepage = "https://github.com/{{user}}/{{repo}}"
# Issues = "https://github.com/{{user}}/{{repo}}/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

# [tool.mypy]
# python_version = "3.10"
# strict = true
